# typex

./: .gitignore  LICENSE  README.md  ROADMAP.md  agent.md  dev.bat  index.html  package-lock.json  package.json  tauri-dev.bat  tsconfig.json  vite.config.ts
.roadmap/: plan.md
TypeX Design System/: README.md  SKILL.md  colors_and_type.css  cozy-logo.html  index.html  loaders.html
TypeX Design System/preview/: _card.css  brand-lockup.html  brand-mark-scale.html  colors-dark-accent.html  colors-dark-surfaces.html  colors-dark-text.html  colors-light-accent.html  colors-light-surfaces.html  colors-light-text.html  components-buttons.html  components-chips-status.html  components-inputs.html  components-menu.html  components-palette.html  components-tabs.html  elevation-dark.html  elevation-light.html  iconography.html  motion.html  radii-scale.html  spacing-scale.html  type-body.html  type-code.html  type-headings.html  type-marks.html
design-system/: README.md  index.html
design-system/brand/: loading-animations.html
design-system/components/: buttons.css  cards.css  inputs.css  navigation.css
design-system/foundations/: animations.css  colors_and_type.css  radii.css  shadows.css  spacing.css
docs/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.3.0.md  v0.4.0.md
marketing/: index.html  styles.css
scripts/: fetch-pandoc.mjs  generate-file-icons.mjs  generate-icons.mjs  generate-installer-assets.mjs  generate-wix-file-icons.mjs  list-edits.mjs  test-paste-detection.mjs
src/: commands.ts  export.ts  main.ts  recent.ts  session.ts  state.ts  theme.ts  welcome.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/ext/: preview.html
src-tauri/src/: cli_runner.rs  git.rs  lib.rs  main.rs  pandoc.rs  secrets.rs  watcher.rs
src/ai/: autocomplete.ts  cli-runner.ts  custom-models.ts  manager.ts  provider.ts  secrets.ts
src/editor/: editor.ts  external-flash.ts  ghost-text.ts  inline-ai-edit.ts  (+5 more)
(+72 files in other folders)
