[package]
name = "typex"
version = "0.1.2"
description = "TypeX — a beautifully crafted Markdown editor"
authors = ["Amptis <hello@amptis.com>"]
license = "MIT"
repository = "https://github.com/amptis/typex"
homepage = "https://amptis.com"
edition = "2021"

[lib]
name = "typex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
